--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-typed": "^2.0.12",
     "react-youtube": "^10.1.0",
     "swiper": "^11.2.1",
     "tw-elements-react": "^1.0.0-alpha-end"
